# cmake-init-vcpkg-example

./: .CMakeUserPresets.json  .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  cmake-presets.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-rules.cmake  lint-targets.cmake  lint.cmake
source/: lib.cpp
